# geo-service/internal/handler/auth/register.go
@@ -6,18 +6,6 @@ import (
 	"net/http"
 )
 
-// Register godoc
-// @Summary      Регистрация пользователя
-// @Description  Регистрирует нового пользователя
-// @Tags         auth
-// @Accept       json
-// @Produce      json
-// @Param        request body model.RegisterRequest true "Email и пароль"
-// @Success      200 {string} string "OK"
-// @Failure      400 {string} string "Bad Request"
-// @Failure      500 {string} string "Internal Error"
-// @Router       /api/register [post]
-
 func (h *AuthHandlerImpl) Register(w http.ResponseWriter, r *http.Request) {
 	var req model.RegisterRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
